RESOLVED FIXED310392
Top color overhang may briefly disappear during rubberband restoration
https://bugs.webkit.org/show_bug.cgi?id=310392
Summary Top color overhang may briefly disappear during rubberband restoration
Lily Spiniolas
Reported 2026-03-20 14:15:22 PDT
Attachments
Lily Spiniolas
Comment 1 2026-03-20 16:11:49 PDT
EWS
Comment 2 2026-03-22 21:38:37 PDT
Committed 309729@main (0be722ca6723): <https://commits.webkit.org/309729@main> Reviewed commits have been landed. Closing PR #61047 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.