Top color overhang may briefly disappear during rubberband restoration https://bugs.webkit.org/show_bug.cgi?id=310392 rdar://173028532

Reviewed by Wenson Hsieh.

After a page reloads during a rubberbanding animation and the animation
is restored, the top color overhang layer is not immediately created,
resulting in the scroll stretch region flickering white.

To fix this, simply check if the `Page` has any top color stored already,
and if it does, create a layer using this color. It is then updated like
normal afterwards if needed.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/ObscuredContentInsets.mm

* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateRootLayerPosition):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ObscuredContentInsets.mm:
(TestWebKitAPI::TEST(ObscuredContentInsets, TopOverhangColorExtensionLayerAppearsImmediatelyAfterReload)):
(TestWebKitAPI::TEST(ObscuredContentInsets, TopOverhangColorExtensionLayerRemovedQuicklyAfterNavigatingToPageWithoutFixedHeader)):

Canonical link: https://commits.webkit.org/309729@main